force-app/main/default/objects/Case_Contact_Role__c/Case_Contact_Role__c.object-meta.xml
<CustomObject>
    <label>Case Contact Role</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Case Role #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Contact Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>