force-app/main/default/objects/Case_Contact_Role__c/fields/Complainant_wishes_to_remain_anonymous__c.field-meta.xml
<CustomField>
    <fullName>Complainant_wishes_to_remain_anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the complainant does not want their information shared externally</inlineHelpText>
    <label>Keep Confidential</label>
    <type>Checkbox</type>
</CustomField>