force-app/main/default/objects/Case_Contact_Role__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <formula>IF(ISPICKVAL(Role__c,&apos;Defendant&apos;),1,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>