force-app/main/default/objects/Case_Contact_Role__c/fields/Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone__c</fullName>
    <formula>Contact__r.Phone</formula>
    <label>Primary Phone</label>
    <type>Text</type>
</CustomField>