force-app/main/default/objects/Case_Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Contact/Relative</fullName>
            </value>
            <value>
                <fullName>Animal Control Officer</fullName>
            </value>
            <value>
                <fullName>Animal Discharge Contact</fullName>
            </value>
            <value>
                <fullName>Animal Owner</fullName>
            </value>
            <value>
                <fullName>Arresting Officer</fullName>
            </value>
            <value>
                <fullName>ASPCA Liaison</fullName>
            </value>
            <value>
                <fullName>Borough Liaison</fullName>
            </value>
            <value>
                <fullName>Civil Attorney</fullName>
            </value>
            <value>
                <fullName>Code Enforcement Officer</fullName>
            </value>
            <value>
                <fullName>Complainant/Caller</fullName>
            </value>
            <value>
                <fullName>Confidential Informant</fullName>
            </value>
            <value>
                <fullName>County Attorney</fullName>
            </value>
            <value>
                <fullName>Court Clerk</fullName>
            </value>
            <value>
                <fullName>Court Reporter</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
            <value>
                <fullName>Defense Attorney</fullName>
            </value>
            <value>
                <fullName>Defense Attorney (Resigned)</fullName>
            </value>
            <value>
                <fullName>DSE</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
            <value>
                <fullName>Former Lead Detective/LEO</fullName>
            </value>
            <value>
                <fullName>Former Prosecutor</fullName>
            </value>
            <value>
                <fullName>Foster</fullName>
            </value>
            <value>
                <fullName>Judge</fullName>
            </value>
            <value>
                <fullName>Lead Animal Control Officer</fullName>
            </value>
            <value>
                <fullName>Lead Detective/LEO</fullName>
            </value>
            <value>
                <fullName>Local Counsel</fullName>
            </value>
            <value>
                <fullName>Plaintiff</fullName>
            </value>
            <value>
                <fullName>Plaintiff Attorney</fullName>
            </value>
            <value>
                <fullName>Prosecutor</fullName>
            </value>
            <value>
                <fullName>Public Information Officer (PIO)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>