force-app/main/default/objects/Case_Contact_Role__c/fields/Secondary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone__c</fullName>
    <formula>Contact__r.MobilePhone</formula>
    <label>Secondary Phone</label>
    <type>Text</type>
</CustomField>